src/test/ui/derives/issue-36617.stderr
error: cannot determine resolution for the attribute macro `derive`
  --> $DIR/issue-36617.rs:1:4
   |
LL | #![derive(Copy)]
   |    ^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to previous error

